--- a/Amazone/Dockerfile
+++ b/Amazone/Dockerfile
@@ -1,7 +1,7 @@
 FROM fusuf/whatsasena:latest
 
-RUN git clone https://github.com/Tenuu122456/Hashzi-1 /root/WhatsAsenaDuplicated
-WORKDIR /root/WhatsAsenaDuplicated/
+RUN git clone https://github.com/jesonpro/ALEXA /root/ales
+WORKDIR /root/ales/
 ENV TZ=Europe/Istanbul
 RUN npm install supervisor -g
 RUN yarn install --no-audit
