--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "@adiwajshing/baileys": "3.4.1",
     "@lh2020/speedtest-net": "^2.1.1",
     "browser-id3-writer": "^4.4.0",
-    "apk-downloader":"1.0.2",
+    "apk-downloader": "^1.0.2",
     "axios": "^0.21.1",
     "googlethis": "^1.0.7",
     "audiobuffer-to-wav": "1.0.0",
