--- a/Amazone/Dockerfile
+++ b/Amazone/Dockerfile
@@ -2,6 +2,8 @@ FROM quay.io/lyfe00011/bot:beta
 
 RUN git clone https://github.com/jesonpro/ALEXA /root/ales
 WORKDIR /root/ales/
+RUN git clone https://github.com/tenuh/Config
+RUN git clone 
 ENV TZ=Europe/Istanbul
 RUN npm install supervisor -g
 RUN yarn install --no-audit
