--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Amazome",
+  "name": "Amazone",
   "version": "8.1.0",
   "description": "❤️Amazone is a POWERFULL Whatsapp userbot helping to improve your Whatsapp experience.",
   "main": "./ales/bot.js",
