--- a/app.json
+++ b/app.json
@@ -26,6 +26,11 @@
             "required": false,
             "value": "false"
          },
+        "BOT_NAME": {
+            "description": "give a name you disire to give your bot (for auto reply white to identify)",
+            "required": false,
+            "value": "👩‍🦰©Amazone Alexa"
+        },
         "FULL_ALEXA": {
             "description": "Activate alexa chat bot",
             "required": false,
@@ -109,12 +114,12 @@
             "required": true,
             "value": "https://telegra.ph/file/2046371f4b8e65dd4d52e.jpg"
         },
-        "WELCOME_LOGO": {
+        "WELCOME_GIF": {
             "description": "Welcome message logo. Enter your image link below to change the image. (Upload the image you want to https://imgbb.com and put that link here.)",
             "required": true,
             "value": "https://telegra.ph/file/d969f3365028c88c7719f.mp4"
         },
-        "BYE_LOGO": {
+        "BYE_GIF": {
             "description": "Good Bye message logo. Enter your image link below to change the image. (Upload the image you want to https://imgbb.com and put that link here.)",
             "required": true,
             "value": "https://telegra.ph/file/d969f3365028c88c7719f.mp4"
