--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "chalk": "^4.1.0",
     "coffeehouse": "^2.0.0",
     "cwebp": "^2.0.5",
+    "spdl-core": "^2.0.3",
     "search-engine-client": "^1.2.6",
     "deepai": "^1.0.17",
     "cwebp-bin": "^6.1.1",
